# src/main/java/com/caribu/filiale/operatorInf/DeleteOpDatabaseHandler.java
@@ -5,16 +5,12 @@ import java.util.Collections;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 
-import com.caribu.filiale.VertxRxWeb;
-
 import io.netty.handler.codec.http.HttpHeaderValues;
 import io.netty.handler.codec.http.HttpResponseStatus;
 import io.vertx.core.Handler;
-import io.vertx.core.json.JsonArray;
 import io.vertx.core.json.JsonObject;
 import io.vertx.rxjava3.core.http.HttpHeaders;
 import io.vertx.rxjava3.ext.web.RoutingContext;
-import io.vertx.rxjava3.pgclient.PgPool;
 import io.vertx.rxjava3.sqlclient.Pool;
 import io.vertx.rxjava3.sqlclient.templates.SqlTemplate;
 
@@ -28,13 +24,13 @@ public class DeleteOpDatabaseHandler implements Handler<RoutingContext> {
 
   @Override
   public void handle(final RoutingContext context) {
-    final String id_tratta = context.pathParam("id_tratta");
-    LOG.info("Executing DB query to delete:...",id_tratta);
+    final String id_quotes = context.pathParam("id_quotes");
+    LOG.info("Executing DB query to delete:...",id_quotes);
     SqlTemplate.forUpdate(db,
-      "DELETE FROM schema.tratta where id_tratta=#{id_tratta}")
-      .rxExecute(Collections.singletonMap("id_tratta", id_tratta))
+      "DELETE FROM schema.quotes where id_quotes=#{id_quotes}")
+      .rxExecute(Collections.singletonMap("id_quotes", id_quotes))
       .doOnSuccess(result -> {
-        LOG.debug("Deleted {} rows for accountId {}", result.rowCount(), id_tratta);
+        LOG.debug("Deleted {} rows for accountId {}", result.rowCount(), id_quotes);
         context.response()
           .setStatusCode(HttpResponseStatus.NO_CONTENT.code())
           .end();
